# malchukovditransitives

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_ditransitive.py  metadata.json  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cldf/: README.md  StructureDataset-metadata.json  cldf-metadata.json  codes.csv  constructions.csv  cvalues.csv  examples.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: config.json  map-icons.csv
raw/: Construction_data.csv  Construction_data.xlsx  Construction_parameters.xlsx  Constructions.csv  Constructions.xlsx  Examples.csv  Examples.xlsx  Language_data.csv  Language_data.xlsx  Language_parameters.csv  Language_parameters.xlsx  Languages.csv  Languages.xlsx  Meanings.xlsx  People.csv  People.xlsx  README.md  References.xlsx  intro.md
raw/csv/: Construction_data.csv  Construction_parameters.csv  Constructions.csv  Examples.csv  Language_data.csv  Language_parameters.csv  Meanings.csv  References.csv
