[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cldfbench_ditransitive"
dependencies = ["cldfbench[glottolog,excel]", "ditrans2cldf"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest-cldf"]

[project.entry-points."cldfbench.dataset"]
ditransitive = "cldfbench_ditransitive:Dataset"

[tool.setuptools]
py-modules = ["cldfbench_ditransitive"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["test.py"]
addopts = "--cldf-metadata=cldf/cldf-metadata.json"
